# pointnet-gpd-ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
PointNetGPD/: main_test.py
dex-net/data/grippers/robotiq_85/: params.json
scripts/ros/: grasp_detect_server.py
scripts/test/: grasp_detect_test.py
scripts/utils/: plot.py  pointclouds.py
